# quizapp

./: .env.prod  .env.prod.example  .gitignore  API.md  Dockerfile  Dockerfile.worker  README.md  aa.env  architecture.md  config.py  containers.py  database.py  database_models.py  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  example.env  main.py  models.py  pyproject.toml
answer/application/: answer_service.py
answer/domain/: answer.py  exceptions.py
common/: auth.py  error_handlers.py  exceptions.py
common/middleware/: active_users.py
common/redis/: client.py  config.py
game/application/: game_service.py
game/domain/: game.py
inquiry/application/: inquiry_service.py
inquiry/domain/: inquiry.py
migrations/: env.py
migrations/versions/: 2024_11_24_2046-c87656221cd5_add_user_table.py  2024_11_30_1141-ff1acf71a653_user_add_memo.py  2024_12_17_2136-34822ff7b9c4_add_role_column_to_users.py  2024_12_17_2158-f31d1af5e81d_add_user_fields.py  2024_12_21_1301-2cc99faf18f1_add_game_table.py  2024_12_21_1305-b823eb78fb18_add_game_number_field.py  2024_12_21_1321-af8cbc785157_rename_tables.py  2024_12_21_1323-4a20e2c26507_add_game_table.py  2024_12_21_1325-706e2f6ddf09_add_game_table.py  update_game_question_link.py  (+17 more)
nginx/: nginx.conf
scripts/: README.md  backup_db.py  create_admin.py  db_setup.py  dummy_answers.json  entrypoint.sh  generate_dummy_answers.py  generate_dummy_games.py  generate_dummy_users.py  generate_test_data.py  run-tests.sh
tests/: conftest.py  test.md
utils/: crypto.py  email.py  password.py
workers/: score_worker.py
(+46 files in other folders)
