[tool.poetry]
name = "quizapp"
version = "0.1.0"
description = ""
authors = ["JEONGMUN LEE <lot9616@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
py-ulid = "^1.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
dependency-injector = "^4.43.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.19"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
redis = "^5.2.1"
rq = "^2.1.0"
sqlalchemy-utils = "^0.40.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
